[package]
name = "rusty-stl"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stl_io = "0.7.0"
clap = { version = "4.4.8", features = ["derive"] }
glob = "0.3.1"
rayon = "1.8.0"
parry3d = "0.18"

[[bin]]
name = "rusty-stl"
